--- a/styleguide_config.yml
+++ b/styleguide_config.yml
@@ -5,7 +5,7 @@
 source: ./sass
 
 # The directory that hologram will build to
-destination: ./styleguide
+destination: ./
 
 # The assets needed to build the docs (includes header.html,
 # footer.html, etc)
@@ -21,7 +21,7 @@ code_example_templates: ./guide_templates
 # If you want to create additional renderers that are not provided
 # by Hologram (i.e. coffeescript renderer, jade renderer, etc)
 # place them in this folder
-code_example_renderers: ./guide_templates
+code_example_renderers: ./guide_renderers
 
 # Any other asset folders that need to be copied to the destination
 # folder. Typically this will include the css that you are trying to
